# timekeeper

./: README.md
client/: Cargo.toml
client/src/: antvm.rs  config.rs  info.rs  main.rs  persistence.rs  printscrn.rs  token.rs  wifi.rs
server/: .env  cli.py  create_user.py  database.db  keygen.py  run.py  test_config.py
server/app/: config.py  main.py
server/app/api/: dependencies.py
server/app/api/endpoints/: __init__.py  auth.py  implant.py  index.py
server/app/crud/: operator.py
server/app/db/: base.py  session.py
server/app/models/: __init__.py  implant.py  operator.py
server/app/schemas/: implant.py  operator.py  summary.py  token.py
server/app/security/: security.py
server/frontend/: api.js  app.js  index.html  index.js  styles.css  test.html  ui.js  utils.js
