[package]
name = "timekeeper"
version = "0.1.0"
edition = "2021"
authors = ["Kasparov <ghost@cia.gov>"]

[dependencies]
wmi = "0.17.2"
rand = "0.8"
quick-xml = "0.31.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
winapi = { version = "0.3", features = ["winuser", "sysinfoapi", "processthreadsapi", "tlhelp32", "shellapi", "winreg", "errhandlingapi", "debugapi", "fileapi", "winnls", "securitybaseapi", "winnt"] }
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_NetworkManagement_WiFi"] }
raw-cpuid = "10.7"
scrap = "0.5.0"
image = "0.25.6"
dirs = "5.0"
chrono = "0.4"
winreg = "0.55.0"
screenshots = "0.8.10"
